--- a/app/views/data/new.html.erb
+++ b/app/views/data/new.html.erb
@@ -3,11 +3,13 @@
 <div class="explanation">
 <p>안녕하세요, 저는 서울대학교 컴퓨터공학부의 박사과정 연구원 한종대(elvenwhite at selab.snu.ac.kr)라고 합니다.</p>
 <p>본 연구조사는 지역적으로 구분된 둘 이상의 개발조직이 하나의 소프트웨어 개발을 위해 협업할 경우 두 개발조직 사이에 나타나는 의사소통 양식의 차이를 알아보기 위한 설문조사입니다.</p>
+<p>본 연구조사의 설문 대상은 다음과 같습니다.</p>
+<li>소프트웨어 개발자이면서</li>
+<li>본인이 속한 프로젝트가 둘 이상의 팀으로 나뉘어, 지역적으로 구분되는 경우(예를 들어, 서울 사무실/제주 사무실과 같이)</li>
 <p>본 연구조사에 답변해주시는 여러분께 우선 감사를 드립니다.</p>
 <p>이 설문조사의 내용은 철저하게 보호되며, 연구를 수행하는 연구팀(3인이며 모두 학교에 재직중입니다.) 외부로 절대 유출되지 않습니다.</p>
-<p>또한 답변해주신 분들 가운데  분을 추첨하여 경품으로   를 드립니다. </p>
+<p>또한 답변해주신 분들 가운데 1 분을 추첨하여 경품으로  아이패드 미니(16g)를 드립니다. </p>
 </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', data_path %>
